fixed follow/unfollow login and fixed notifications alignment

--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -5,4 +5,10 @@
 
 ion-row{
     width: 100%;
+    height: 70px;
+}
+
+ion-grid {
+    width: 100%;
+    margin: 0;
 }
